# TeenyTinyBits

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  constants.hpp  constants.hpp.in  main.cpp  old_CMakeLists.txt  run.sh
.generated_scripts/: constants.hpp
.github/workflows/: cmake-multi-platform.yml
demo/src/: main.cpp
include/GLAD/: glad.c
include/ImGui/backends/: imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_dx10.cpp  imgui_impl_dx11.cpp  imgui_impl_dx9.cpp  imgui_impl_glfw.cpp  imgui_impl_metal.mm  imgui_impl_opengl2.cpp  imgui_impl_osx.h  imgui_impl_osx.mm  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdl3.cpp  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlgpu3.h  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer3.cpp  imgui_impl_vulkan.cpp  imgui_impl_wgpu.cpp  imgui_impl_wgpu.h
include/glad/: glad.c  glad.h
old_src/: game_window.hpp  input_manager.hpp  main.hpp  shader.cpp
scripts/: component_system.cpp  component_system.hpp  game_window.cpp  game_window.hpp  input_manager.cpp  input_manager.hpp  main.cpp  main.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp
scripts/components/: transform.cpp  transform.hpp
shaders/: bits.comp  lighting.frag  physics_object.glsl  position.comp  shader.frag  shader.vert  velocity.comp
shaders/include/: physics_object.glsl
src/: CMakeLists.txt  component_system.cpp  component_system.hpp  component_system.hxx  entity.hpp  entity_manager.hpp  game_window.cpp  game_window.hpp  input_manager.cpp  input_manager.hpp  main.cpp  main.hpp  print.hpp  scene.cpp  scene.hpp  scene.hxx  shader.cpp  shader.hpp
src/component_system/: component_manager.cpp  component_manager.hpp  component_manager.hxx  entity.hpp  entity_manager.cpp  entity_manager.hpp  scene.cpp  scene.hpp  scene.hxx
src/components/: component.hpp  game_window.cpp  game_window.hpp  name.hpp  transform.hpp
src/ecs/: component.hpp  component_manager.cpp  component_manager.hpp  component_pool.hpp  component_signature.cpp  component_signature.hpp  entity.hpp  entity_component_system.cpp  entity_component_system.hpp  entity_manager.cpp  entity_manager.hpp  scene.cpp  scene.hpp  system.cpp  system.hpp  system_manager.cpp  system_manager.hpp
src/ecs/components/: game_window.cpp  game_window.hpp  name.hpp  texture.hpp  transform.hpp
src/ecs/systems/: sprite_system.hpp  window_system.cpp  window_system.hpp
src/systems/: window_system.cpp  window_system.hpp
